# dj-otp

./: .gitignore  README.rst  pyproject.toml  requirements.txt
config/: settings.py  urls.py
otp/: admin.py  model_managers.py  models.py  serializers.py  throttles.py  urls.py  views.py
otp/migrations/: 0001_initial.py  0002_otprequest.py  0003_alter_otprequest_valid_until.py
